# blueprint-legacy

./: .gitignore  Cargo.toml  README.md  blueprint.spec  build.rs  meson.build  meson_options.txt
.github/workflows/: rust.yml
build-aux/: dev.edfloreshz.Blueprint.Devel.json  dev.edfloreshz.Devx.Devel.json
cli/: Cargo.toml
cli/src/: args.rs  config.rs  main.rs
core/: Cargo.toml
core/examples/: usage.rs
core/src/: lib.rs
core/src/preferences/: code_editor.rs  dotfiles.rs  language.rs  library.rs  mod.rs  shell.rs  source.rs
data/: blueprint.1  dev.edfloreshz.Blueprint.desktop.in.in  dev.edfloreshz.Blueprint.gschema.xml.in  dev.edfloreshz.Blueprint.metainfo.xml.in.in  dev.edfloreshz.Devx.desktop.in.in  dev.edfloreshz.Devx.gschema.xml.in  dev.edfloreshz.Devx.metainfo.xml.in.in  meson.build
data/resources/: resources.gresource.xml
docs/: CNAME  contact.html  index.html  style.css
docs/.well-known/: org.flathub.VerifiedApps.txt
i18n/en/: blueprint.ftl
i18n/es-MX/: blueprint.ftl
po/: POTFILES.in
src/: app.rs  config.rs  config.rs.in  main.rs  setup.rs
src/application/: localization.rs
src/components/: content.rs  mod.rs  preferences.rs  sidebar.rs
src/components/pages/: code_editors.rs  languages.rs  libraries.rs  mod.rs  shells.rs
src/factories/: change.rs  code_editor.rs  language.rs  library.rs  mod.rs  shell.rs
src/modals/: about.rs  mod.rs  password.rs  summary.rs
src/models/: app_preferences.rs  mod.rs  page.rs
