[package]
name = "blueprint"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]
edition = "2021"
publish = false

[workspace]
members = ["cli", "core"]

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.71"
blueprint_core = { path = "core" }
dirs = "5.0.1"
derive-new = "0.5.9"
once_cell = "1.17.2"
i18n-embed-fl = "0.6.4"

[dependencies.relm4]
git = "https://github.com/Relm4/Relm4"
rev = "c8fb239"
features = ["libadwaita", "gnome_43"]

[dependencies.relm4-icons]
version = "0.6.0-beta.7"
features = [
    "panel-right-contract-filled",
    "code-block-filled",
    "chat-filled",
    "bookmark-multiple-filled",
    "slide-text-filled",
    "settings-filled",
    "more-horizontal-filled",
    "toggle-multiple-filled",
    "dark-mode",
    "checkbox-checked-filled",
    "checkmark-circle-filled",
    "warning",
]

[dependencies.rust-embed]
version = "6.6.1"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.13.9"
features = ["fluent-system", "desktop-requester"]

[build-dependencies]
glib-build-tools = "0.17.0"
